5/21/2006 Bob Rossi <bob@brasko.net>

	* src/fork_util.c (pty_free_memory): Add function.
	(invoke_debugger): Change to use a pty instead of a pipe.

version 0.6.2 (04/09/2006):

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Autogenerated.

version 0.6.1 (03/06/2006):
version 0.6.0 (01/30/2006):

1/19/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

1/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

10/06/2005 Bob Rossi <bob@brasko.net>
  
	* include/terminal.h (tty_reset): Removed.
	(tty_get_attributes, tty_set_attributes, tty_off_xon_xoff): Added.
	* src/terminal.c (tty_reset): Removed.
	(tty_get_attributes, tty_set_attributes, tty_off_xon_xoff): Added.

09/30/2005 Bob Rossi <bob@brasko.net>

	* include/fork_util.h (invoke_process,pty_free_process): Remove
	functions.
	(pty_pair_*): Add interface for pty's.
	* src/fork_util.c: Implement above interface.

version 0.5.3 (08/08/2005):

08/02/2005 Bob Rossi <bob@brasko.net>
  
	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

08/02/2005 Bob Rossi <bob@brasko.net>
  
	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.
	* src/logger.c (HAVE_STRINGS_H): Misspelling. Changed to
	HAVE_STRING_H.

06/30/2005 Bob Rossi <bob@brasko.net>

	* io.h (io_getchar): Add parameter and return value semantics.
	* io.c (io_getchar): Ditto.

05/23/2005 Bob Rossi <bob@brasko.net>

	* fork_util.h (invoke_pty_process): Removed.
	* fork_util.c (invoke_pty_process): Ditto.

version 0.5.2 (05/21/2005):

05/19/2005 Bob Rossi <bob@brasko.net>

	* io.c (io_data_ready): Oops, here is the correct fix.

05/19/2005 Bob Rossi <bob@brasko.net>

	* io.c (io_data_ready): Modified timeout.tv_usec value.

05/19/2005 Bob Rossi <bob@brasko.net>

	* io.h (io_data_ready): Add new return value in comment.